--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,36 @@
-body {
-  color: #999;
+.grid-container {
+  display: grid;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.welcome {
-  color: rgb(61, 192, 146);
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.grid-row {
+  margin-bottom: 10px;
+}
+
+.grid-row:last-child {
+  margin-bottom: 0;
+}
+
+.grid-row:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.grid-cell {
+  width: 150px;
+  height: 150px;
+  margin-right: 10px;
+  float: left;
+  border-radius: 3px;
+  background: #8687ad;
+}
+
+.grid-cell:last-child {
+  margin-right: 0;
+}
+
+img {
+  padding: 15px 15px;
 }
